--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,9 +2,7 @@
   "builds": [
     {
       "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": {}
+      "use": "@vercel/node"
     }
-  ],
-  "routes": []
+  ]
 }
